GNU make NEWS                                               -*-indented-text-*-
  History of user-visible changes.
  November 2005

Copyright (C) 2002, 2004, 2005  Free Software Foundation, Inc.
See the end for copying conditions.

Please send remake bug reports to <rocky@panix.com>.
See the README file and the GNU remake manual for details on sending bug
reports.

Version 3.80+dbg-0.5cvs

* Add a number of aliases (e.g. backtrace, bt, !!) 
  and via an internal alias mechanism

* target command improvements:
   -  sets file variables if when showing file variables
     requested
   - add "target expand" to list target commands with "make" variables
     expanded.
   - allow @ or $@ as a target name 

* remove hash stats on printing variables -- generally not wanted for
  users (rather than GNU Make maintainers)

* More document updates

Version 3.80+dbg-0.4

* Add eval!

* Add ability to stop before reading Makefiles - may be useful in 
  debugging macros and variables --debugger=preread. We can now trace
  makefile reading activity with -d r or via --trace = {read,full}
  
* "where" command expanded to include above new Makefile read stack.

* Add call tracing.

* Fix bugs in showing automatic variables 

* Line number in Makefile commands is more accurate

* More ddd (gdb/bashdb) compatible: 
  - "help set" added 
  - "help show" works like the others
  - "info locals" added
  - "show command" (history) added
  - file/line reporting more like bash/perl

* write file takes basename of target file (well, at least for POSIX
  systems)

* Update documentation quite a bit

* Start to remove VMS support

Version 3.80+dbg-0.3

* tracing adds GNU Make "basic" debugging. If debugging, then we also
  enter the debugger read loop. Hopefully this adds more granularity
  but not the diarrhea that "make -d" gives. To reduce this, "next"
  could be used to skip over remaking targets that don't have
  commands.

* print and examine now show origin status
